Refactor into packages and classes